--- a/demos/basic-soy/index.html
+++ b/demos/basic-soy/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
 	<div class="senna-loading-bar"></div>
-	<a href="/demos/basic-soy/">Home</a> | <a href="/demos/basic-soy/home-page">Home Page</a> | <a href="/demos/basic-soy/about">About</a> | <a href="/demos/basic-soy/about/us">About Us</a> | <a href="/demos/basic-soy/about-delayed">About Delayed</a>
+	<a href="/demos/basic-soy/">Home</a> |
+	<a href="/demos/basic-soy/home-page">Home Page</a> |
+	<a href="/demos/basic-soy/about">About</a> |
+	<a href="/demos/basic-soy/about/us">About Us</a> |
+	<a href="/demos/basic-soy/about-delayed">About Delayed</a>
 	<script src="build/metal.js"></script>
 	<script>
 		metal.Router.router().on('startNavigate', function(event) {
